updated resume body

--- a/index.html
+++ b/index.html
@@ -7,17 +7,17 @@
 	<body>
 		<div id="title-block">
 			<h1>Pierson D'Enbeau</h1>
-			<h3>5223 S. Dixie Highway Franklin OH 45005
-			<br>(513) 258-4189 | denbeapc@gmail.com</h3>
+			<h5>5223 S. Dixie Highway Franklin OH 45005
+			<br>(513) 258-4189 | denbeapc@gmail.com</h5>
 		</div>
 		<div id="block-of-info">
 			<h4>EDUCATION</h4>
 			<p>Miami University College of Engineering and Computing
-			<br>Bachelor of Science in Computer Science</p>
+			<br><em>Bachelor of Science in Computer Science</em></p>
 
 			<h4>WORK EXPERIENCE</h4>
 			<p>Climb Time of Blue Ash
-			<br>Route Setter, Climbing and Safety Instructor, Front Desk Attendant</p>
+			<br><em>Route Setter, Climbing and Safety Instructor, Front Desk Attendant</em></p>
 			<ul>
 				<li>Work with route setters to establish a professional, and enjoyable climbing wall for the clientele</li>
 				<li>Input customers into software database</li>
@@ -27,16 +27,30 @@
 
 			<h4>COMMUNITY AND CAMPUS INVOLVEMENT</h4>
 			<p>Miami Bouldering
-			<br>Trip Coordinator</p>
+			<br><em>Trip Coordinator</em></p>
 			<ul>
 				<li>Established a trip plan for the first three years of the club</li>
 				<li>Coordinate with president and treasurer to allocate funding for trips</li>
 				<li>Worked with president and treasurer to recruit over 100 active members in the first two semesters</li>
 			</ul>
 
+			<h4>PROJECTS</h4>
+			<p>Queens Problem</p>
+			<ul>
+				<li>Utilized a recursive lookup algorithm to, in all cases, find the best outcome</li>
+				<li>Designed and implemented a GUI chess board for placing queens and highlighting tiles for hints, correct and improper queen placements</li>
+				<li>Solves the Queens Problem successfully 100% of the time</li>
+			</ul>
+			<p>Movie Rental Database</p>
+			<ul>
+				<li>Utilized LinkedList to manage all the databases for the software</li>
+				<li>Design and organize the GUI for most efficient and aesthetically pleasing layout</li>
+				<li>Implement a simple to navigate customer and employee database of movies that are for rent and able to be returned</li>
+			</ul>
+
 			<h4>SKILLS AND INTERESTS</h4>
-			<p>Programming Languages Known: Java, C++, C#, HTML, CSS, JavaScript, SQL
-			<br>Interests: Rock climbing, hiking, soccer, video editing, photography, drawing, painting, video gaming, piano</p>
+			<p><strong>Programming Languages Known:</strong> Java, C++, C#, HTML, CSS, JavaScript, SQL
+			<br><strong>Interests:</strong> Rock climbing, hiking, soccer, video editing, photography, drawing, painting, video gaming, piano</p>
 		</div>
 	</body>
 </html>
