updated body, html, and style sheet

--- a/index.html
+++ b/index.html
@@ -5,11 +5,14 @@
 		<link href="main.css" type="text/css" rel="stylesheet"></link>
 	</head>
 	<body>
+		<!-- This is the name and contact info block -->
 		<div id="title-block">
 			<h1>Pierson D'Enbeau</h1>
 			<h5>5223 S. Dixie Highway Franklin OH 45005
 			<br>(513) 258-4189 | denbeapc@gmail.com</h5>
 		</div>
+
+		<!-- This is the resume info block -->
 		<div id="block-of-info">
 			<h4>EDUCATION</h4>
 			<p>Miami University College of Engineering and Computing
@@ -35,13 +38,15 @@
 			</ul>
 
 			<h4>PROJECTS</h4>
-			<p>Queens Problem</p>
+			<p>Queens Problem
+			<br><em>Java</em></p>
 			<ul>
 				<li>Utilized a recursive lookup algorithm to, in all cases, find the best outcome</li>
 				<li>Designed and implemented a GUI chess board for placing queens and highlighting tiles for hints, correct and improper queen placements</li>
 				<li>Solves the Queens Problem successfully 100% of the time</li>
 			</ul>
-			<p>Movie Rental Database</p>
+			<p>Movie Rental Database
+			<br><em>Java</em></p>
 			<ul>
 				<li>Utilized LinkedList to manage all the databases for the software</li>
 				<li>Design and organize the GUI for most efficient and aesthetically pleasing layout</li>
