--- a/index.html
+++ b/index.html
@@ -1,78 +1,35 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Resume</title>
+		<title>Home</title>
 		<link href="main.css" type="text/css" rel="stylesheet" />
 	</head>
 	<body>
 		<!-- This is the name and contact info block -->
 		<div class="title-block">
-			<p class="header1">Pierson D'Enbeau</p>
-			<p class="header3">5223 S. Dixie Highway Franklin OH 45005
-			<br>(513) 258-4189 | denbeapc@gmail.com</p>
-		</div>
-
-		<!-- This is the resume info block -->
-		<div class="section-block">
-			<p class="header2">EDUCATION</p>
-			<div class="section-text">
-				<p>Miami University College of Engineering and Computing
-				<br /><em>Bachelor of Science in Computer Science</em></p>
+			<div class="contact-info">
+				<p class="header1">Pierson D'Enbeau</p>
+				<p class="header3">5223 S. Dixie Highway Franklin OH 45005
+				<br>(513) 258-4189 | denbeapc@gmail.com</p>
+			</div>
+			<div class="nav-menu">
+				<a href="index.html">About</a>
+				<a href="resume.html">Resume</a>
+				<a href="achievements.html">Achievements</a>
+				<a href="bootcamp.html">Bootcamp</a>
 			</div>
 		</div>
 
 		<div class="section-block">
-			<p class="header2">WORK EXPERIENCE</p>
+			<p class="header2" style="text-align: center;">ABOUT ME</p>
 			<div class="section-text">
-				<p>Climb Time of Blue Ash
-				<br/><em>Route Setter, Climbing and Safety Instructor, Front Desk Attendant</em></p>
-				<ul>
-					<li>Work with route setters to establish a professional, and enjoyable climbing wall for the clientele</li>
-					<li>Input customers into software database</li>
-					<li>Establish and keep control of a safe climbing space for all clientele</li>
-					<li>Instruct new climbers on the fundamentals of safety, climbing, and fitness</li>
-				</ul>
-			</div>
-		</div>
-
-		<div class="section-block">
-			<p class="header2">COMMUNITY AND CAMPUS INVOLVEMENT</p>
-			<div class="section-text">
-				<p>Miami Bouldering
-				<br /><em>Trip Coordinator</em></p>
-				<ul>
-					<li>Established a trip plan for the first three years of the club</li>
-					<li>Coordinate with president and treasurer to allocate funding for trips</li>
-					<li>Worked with president and treasurer to recruit over 100 active members in the first two semesters</li>
-				</ul>
-			</div>
-		</div>
-
-		<div class="section-block">
-		<p class="header2">PROJECTS</p>
-			<div class="section-text">
-				<p>Queens Problem
-				<br /><em>Java</em></p>
-				<ul>
-					<li>Utilized a recursive lookup algorithm to, in all cases, find the best outcome</li>
-					<li>Designed and implemented a GUI chess board for placing queens and highlighting tiles for hints, correct and improper queen placements</li>
-					<li>Solves the Queens Problem successfully 100% of the time</li>
-				</ul>
-				<p>Movie Rental Database
-				<br /><em>Java</em></p>
-				<ul>
-					<li>Utilized LinkedList to manage all the databases for the software</li>
-					<li>Design and organize the GUI for most efficient and aesthetically pleasing layout</li>
-					<li>Implement a simple to navigate customer and employee database of movies that are for rent and able to be returned</li>
-				</ul>
-			</div>
-		</div>
-
-		<div class="section-block">
-			<p class="header2">SKILLS AND INTERESTS</p>
-			<div class="section-text">
-				<p><strong>Programming Languages Known:</strong> Java, C++, C#, HTML, CSS, JavaScript, SQL
-				<br /><br /><strong>Interests:</strong> Rock climbing, hiking, soccer, video editing, photography, drawing, painting, video gaming, piano</p>
+				<img id="image-of-me" src="\C:\Users\Max-Student\Pictures\me.png" width="300" alt="me"><p>I have been programming ever since I was a freshman in high school. I had just beaten a video game I 
+				was playing, and the credits displayed the Java programming language logo. I was curious, and after some 
+				research, I ended the night writing my first "Hello World" program.
+				<br /><br />After spending many years exclusively coding in Java, I decided to make the switch to the C 
+				languages. I started off practicing C++ through making small ASCII video games. Soon after that, I found C# and have been coding in the .NET framework ever since.
+				<br /><br />I am an avid rock climber, and I love art. You can always find me near a mountain, on my computer, or at an art museum. I'm constantly trying to find ways to incorporate artistic inspiration into 
+				my projects.</p>
 			</div>
 		</div>
 	</body>
