edit format and layout, also added contact page

--- a/bootcamp.html
+++ b/bootcamp.html
@@ -7,16 +7,16 @@
 	<body>
 		<!-- This is the name and contact info block -->
 		<div class="title-block">
-			<div class="contact-info">
+			<div class="my-name">
 				<p class="header1">Pierson D'Enbeau</p>
-				<p class="header3">5223 S. Dixie Highway Franklin OH 45005
-				<br>(513) 258-4189 | denbeapc@gmail.com</p>
+				<p class="header2">(513) 258-4189 | denbeapc@gmail.com</p>
 			</div>
 			<div class="nav-menu">
 				<a href="index.html">About</a>
 				<a href="resume.html">Resume</a>
 				<a href="achievements.html">Achievements</a>
 				<a href="bootcamp.html">Bootcamp</a>
+				<a href="contact.html">Contact</a>
 			</div>
 		</div>
 
@@ -26,8 +26,7 @@
 				<p>Due to my previous experience in programming and computer science, when I met my grandfather for 
 				the first time, he offered me a job. The only thing I had to do, was go through a bootcamp that would 
 				progress my skills in the areas that his work needed.
-				<br /><br />After weeks of research, and reading about numerous coding bootcamps, I had picked one. MAX Technical Training. They had the .NET program that I needed to be in, while also having a fantastic track 
-				record for preparing students for the outside world.</p>
+				<br /><br />After weeks of research, and reading about numerous coding bootcamps, I had picked one. MAX Technical Training. They had the .NET program that I needed to be in, while also having a fantastic track record for preparing students for the outside world.</p>
 			</div>
 		</div>
 	</body>
