--- a/index.html
+++ b/index.html
@@ -1,29 +1,29 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Home</title>
+		<title>About Me</title>
 		<link href="main.css" type="text/css" rel="stylesheet" />
 	</head>
 	<body>
 		<!-- This is the name and contact info block -->
 		<div class="title-block">
-			<div class="contact-info">
+			<div class="my-name">
 				<p class="header1">Pierson D'Enbeau</p>
-				<p class="header3">5223 S. Dixie Highway Franklin OH 45005
-				<br>(513) 258-4189 | denbeapc@gmail.com</p>
+				<p class="header2">(513) 258-4189 | denbeapc@gmail.com</p>
 			</div>
 			<div class="nav-menu">
 				<a href="index.html">About</a>
 				<a href="resume.html">Resume</a>
 				<a href="achievements.html">Achievements</a>
 				<a href="bootcamp.html">Bootcamp</a>
+				<a href="contact.html">Contact</a>
 			</div>
 		</div>
 
 		<div class="section-block">
 			<p class="header2" style="text-align: center;">ABOUT ME</p>
 			<div class="section-text">
-				<img id="image-of-me" src="\C:\Users\Max-Student\Pictures\me.png" width="300" alt="me"><p>I have been programming ever since I was a freshman in high school. I had just beaten a video game I 
+				<img id="about-me-img" src="\C:\Users\Max-Student\Pictures\me.png" width="300" alt="me"><p>I have been programming ever since I was a freshman in high school. I had just beaten a video game I 
 				was playing, and the credits displayed the Java programming language logo. I was curious, and after some 
 				research, I ended the night writing my first "Hello World" program.
 				<br /><br />After spending many years exclusively coding in Java, I decided to make the switch to the C 
