--- a/achievements.html
+++ b/achievements.html
@@ -7,16 +7,16 @@
 	<body>
 		<!-- This is the name and contact info block -->
 		<div class="title-block">
-			<div class="contact-info">
+			<div class="my-name">
 				<p class="header1">Pierson D'Enbeau</p>
-				<p class="header3">5223 S. Dixie Highway Franklin OH 45005
-				<br>(513) 258-4189 | denbeapc@gmail.com</p>
+				<p class="header2">(513) 258-4189 | denbeapc@gmail.com</p>
 			</div>
 			<div class="nav-menu">
 				<a href="index.html">About</a>
 				<a href="resume.html">Resume</a>
 				<a href="achievements.html">Achievements</a>
 				<a href="bootcamp.html">Bootcamp</a>
+				<a href="contact.html">Contact</a>
 			</div>
 		</div>
 
