changed basically everything

--- a/achievements.html
+++ b/achievements.html
@@ -3,13 +3,19 @@
 	<head>
 		<title>Achievements</title>
 		<link href="main.css" type="text/css" rel="stylesheet" />
+
+		<script src="http://code.jquery.com/jquery-3.1.0.min.js" type="text/javascript"></script>
+		<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" type="text/css" rel="stylesheet"></link>
+		<script lang="javascript">
+
+		</script>
 	</head>
 	<body>
 		<!-- This is the name and contact info block -->
 		<div class="title-block">
 			<div class="my-name">
 				<p class="header1">Pierson D'Enbeau</p>
-				<p class="header2">(513) 258-4189 | denbeapc@gmail.com</p>
+				<p class="subheader">(513) 258-4189 | denbeapc@gmail.com</p>
 			</div>
 			<div class="nav-menu">
 				<a href="index.html">About</a>
@@ -23,7 +29,9 @@
 		<div class="section-block">
 			<p class="header2" style="text-align: center;">SOME OF MY ACHIEVEMENTS</p>
 			<div class="section-text">
-				<p>Most of my current achievements are from competing in rock climbing competitions.</p>
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis aliquet massa nisi, vitae faucibus felis faucibus sit amet. Morbi vehicula felis id erat mattis accumsan. Fusce non tortor ut turpis consectetur semper. Duis blandit eros metus, at consequat purus aliquam sed. Suspendisse rutrum eros id orci blandit, a posuere urna aliquet. Duis volutpat velit turpis, eu hendrerit ex egestas et. Morbi bibendum est vitae ex finibus, vel egestas neque vehicula. Donec sit amet est ac elit blandit dapibus sed id diam. Curabitur imperdiet facilisis arcu sed suscipit. Donec sit amet massa cursus arcu condimentum feugiat a at elit. Donec faucibus consectetur sapien eu facilisis. Mauris posuere velit sit amet mauris sodales, id rutrum erat bibendum.</p>
+
+				<p>Duis in ex porta magna accumsan commodo. Suspendisse sed quam quis magna dignissim aliquam. Pellentesque venenatis dictum hendrerit. Praesent varius quam at ex congue, vitae tempus tellus venenatis. Sed libero enim, molestie quis orci sed, dictum semper mi. Aenean nunc tellus, tincidunt lobortis quam sit amet, pretium pretium ligula. Pellentesque ac consectetur ipsum, in vestibulum neque. Fusce id faucibus leo, nec maximus nisi. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Mauris consectetur, risus sit amet convallis vestibulum, augue ante luctus felis, eget tincidunt tortor lacus in risus. Duis ultrices est ut lacus elementum tempor. Praesent viverra mauris dui, non dictum lectus ultrices sit amet.</p>
 			</div>
 		</div>
 	</body>
