--- a/index.html
+++ b/index.html
@@ -3,13 +3,19 @@
 	<head>
 		<title>About Me</title>
 		<link href="main.css" type="text/css" rel="stylesheet" />
+
+		<script src="http://code.jquery.com/jquery-3.1.0.min.js" type="text/javascript"></script>
+		<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" type="text/css" rel="stylesheet"></link>
+		<script lang="javascript">
+
+		</script>
 	</head>
 	<body>
 		<!-- This is the name and contact info block -->
 		<div class="title-block">
 			<div class="my-name">
 				<p class="header1">Pierson D'Enbeau</p>
-				<p class="header2">(513) 258-4189 | denbeapc@gmail.com</p>
+				<p class="subheader">(513) 258-4189 | denbeapc@gmail.com</p>
 			</div>
 			<div class="nav-menu">
 				<a href="index.html">About</a>
@@ -21,14 +27,17 @@
 		</div>
 
 		<div class="section-block">
-			<p class="header2" style="text-align: center;">ABOUT ME</p>
+			<div>
+				<img class="img-rounded" id="about-me-img" src="\C:\Users\Max-Student\Pictures\me.png" width="300" alt="me">
+			</div>
 			<div class="section-text">
-				<img id="about-me-img" src="\C:\Users\Max-Student\Pictures\me.png" width="300" alt="me"><p>I have been programming ever since I was a freshman in high school. I had just beaten a video game I 
+				<p class="header2" style="text-align: center;">ABOUT ME</p>
+				<p>I have been programming ever since I was a freshman in high school. I had just beaten a video game I 
 				was playing, and the credits displayed the Java programming language logo. I was curious, and after some 
 				research, I ended the night writing my first "Hello World" program.
 				<br /><br />After spending many years exclusively coding in Java, I decided to make the switch to the C 
 				languages. I started off practicing C++ through making small ASCII video games. Soon after that, I found C# and have been coding in the .NET framework ever since.
-				<br /><br />I am an avid rock climber, and I love art. You can always find me near a mountain, on my computer, or at an art museum. I'm constantly trying to find ways to incorporate artistic inspiration into 
+				<br /><br />I am absolutely in love with rock climbing, surrealist art. You can always find me near a mountain, on my computer, or at an art museum. I'm constantly trying to find ways to incorporate artistic inspiration into 
 				my projects.</p>
 			</div>
 		</div>
