--- a/bootcamp.html
+++ b/bootcamp.html
@@ -3,13 +3,19 @@
 	<head>
 		<title>Bootcamp</title>
 		<link href="main.css" type="text/css" rel="stylesheet" />
+
+		<script src="http://code.jquery.com/jquery-3.1.0.min.js" type="text/javascript"></script>
+		<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" type="text/css" rel="stylesheet"></link>
+		<script lang="javascript">
+
+		</script>
 	</head>
 	<body>
 		<!-- This is the name and contact info block -->
 		<div class="title-block">
 			<div class="my-name">
 				<p class="header1">Pierson D'Enbeau</p>
-				<p class="header2">(513) 258-4189 | denbeapc@gmail.com</p>
+				<p class="subheader">(513) 258-4189 | denbeapc@gmail.com</p>
 			</div>
 			<div class="nav-menu">
 				<a href="index.html">About</a>
