--- a/contact.html
+++ b/contact.html
@@ -4,38 +4,21 @@
 	<title>Contact Me</title>
 	<link href="main.css" type="text/css" rel="stylesheet" />
 
+	<script src="http://code.jquery.com/jquery-3.1.0.min.js" type="text/javascript"></script>
+	<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" type="text/css" rel="stylesheet"></link>
+	<script lang="javascript">
+
+	</script>
+
 	<style>
-		table {
-			padding: 7px;
-
-			width: 25%;
-			margin: auto;
-		}
-
-		td label {
-			display: block;
-			text-align: right;
-		}
 	</style>
 
 	<script lang="javascript">
-		function submit_clicked() {
-			var name = document.getElementById("name").value;
-			var company = document.getElementById("company").value;
-			var email = document.getElementById("email").value;
-			var phone = document.getElementById("phone").value;
-			var extra_info = document.getElementById("extra_info").value;
+		$().ready(function {
+			$("#submit").click(function() {
 
-			console.log(name, company, email, phone, extra_info);
-		}
-
-		function cancel_clicked() {
-			document.getElementById("name").value = "";
-			document.getElementById("company").value = "";
-			document.getElementById("email").value = "";
-			document.getElementById("phone").value = "";
-			document.getElementById("extra_info").value = "";
-		}
+			});
+		});
 	</script>
 </head>
 <body>
@@ -43,7 +26,7 @@
 	<div class="title-block">
 		<div class="my-name">
 			<p class="header1">Pierson D'Enbeau</p>
-			<p class="header2">(513) 258-4189 | denbeapc@gmail.com</p>
+			<p class="subheader">(513) 258-4189 | denbeapc@gmail.com</p>
 		</div>
 		<div class="nav-menu">
 			<a href="index.html">About</a>
@@ -56,49 +39,43 @@
 
 	<div class="section-block" style="display:inline-block;">
 		<div style="width: 45%; float: left;">
-			<img id="contact-me-img" src="\C:\Users\Max-Student\Pictures\contact.jpg" alt="contact-img" width="400">
+			<img class="img-rounded" id="contact-me-img" src="\C:\Users\Max-Student\Pictures\contact.jpg" alt="contact-img" width="400">
 		</div>
 		<div style="width: 45%; float: left;">
-			<form method="GET" action="https://github.com/denbeapc">
-				<table>
-					<thead>
-						<tr>
-							<td colspan="2">
-								<label class="header2" style="text-align: center;">Your Contact Info<label>
-							</td>
-						</tr>
-					</thead>
-					<tbody>
-						<tr>
-							<td><label>Name: </label></td>
-							<td><input id="name" type="text" size="30" placeholder="First and Last Name" style="font-size: 16pt" /></td>
-						</tr>
-						<tr>
-							<td><label>Company: </label></td>
-							<td><input id="company" type="text" size="30" placeholder="Company Name" style="font-size: 16pt" /></td>
-						</tr>
-						<tr>
-							<td><label>Email: </label></td>
-							<td><input id="email" type="text" size="20" placeholder="Email" style="font-size: 16pt" /></td>
-						</tr>
-						<tr>
-							<td><label>Phone: </label></td>
-							<td><input id="phone" type="text" size="15" placeholder="(xxx) xxx-xxxx" style="font-size: 16pt" /></td>
-						</tr>
-						<tr>
-							<td><label>More Info: </label></td>
-							<td><textarea id="extra_info" cols="60" rows="8"></textarea>
-						</tr>
-						<tr>
-							<td colspan="2" style="text-align: center;">
-								<button type="button" onclick="submit_clicked()">Submit</button>
-								&nbsp;
-								<button type="button" onclick="cancel_clicked()">Cancel</button>
-							</td>
-						</tr>
-					</tbody>
-				</table>
-			</form>
+			<form class="form-horizontal">
+			<div class="form-group">
+				<label for="name" class="col-sm-2 control-label">Name</label>
+				<div class="col-sm-9">
+					<input type="text" class="form-control" id="name" placeholder="Name" />
+				</div>
+			</div>
+			<div class="form-group">
+				<label for="company" class="col-sm-2 control-label">Company</label>
+				<div class="col-sm-9">
+					<input type="text" class="form-control" id="company" placeholder="Company" />
+				</div>
+			</div>
+			<div class="form-group">
+				<label for="email" class="col-sm-2 control-label">Email</label>
+				<div class="col-sm-9">
+					<input type="text" class="form-control" id="email" placeholder="Email" />
+				</div>
+			</div>
+			<div class="form-group">
+				<label for="phone" class="col-sm-2 control-label">Phone number</label>
+				<div class="col-sm-9">
+					<input type="text" class="form-control" id="phone" placeholder="Phone number" />
+				</div>
+			</div>
+			<div class="form-group">
+				<label for="moreinfo" class="col-sm-2 control-label">More info</label>
+				<div class="col-sm-9">
+					<textarea class="form-control" rows="3"></textarea>
+				</div>
+			</div>
+
+			<button id="submit" class="btn btn-primary btn-lg col-sm-2">Submit</button>
+		</form>
 		</div>
 	</div>
 </body>
