lots of changes (unfinished)

--- a/contact.html
+++ b/contact.html
@@ -14,11 +14,6 @@
 	</style>
 
 	<script lang="javascript">
-		$().ready(function {
-			$("#submit").click(function() {
-
-			});
-		});
 	</script>
 </head>
 <body>
@@ -39,7 +34,7 @@
 
 	<div class="section-block" style="display:inline-block;">
 		<div style="width: 45%; float: left;">
-			<img class="img-rounded" id="contact-me-img" src="\C:\Users\Max-Student\Pictures\contact.jpg" alt="contact-img" width="400">
+			<img class="img-rounded" id="contact-me-img" src="\images\contact.jpg" alt="contact-img" width="400">
 		</div>
 		<div style="width: 45%; float: left;">
 			<form class="form-horizontal">
