--- a/index.html
+++ b/index.html
@@ -1,45 +1,65 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>About Me</title>
+		<title>Pierson D'Enbeau</title>
 		<link href="main.css" type="text/css" rel="stylesheet" />
 
 		<script src="http://code.jquery.com/jquery-3.1.0.min.js" type="text/javascript"></script>
+		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular.js"></script>
+		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular-route.js"></script>
+		
 		<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" type="text/css" rel="stylesheet"></link>
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+		
+		<script src="ng/app.js" type="text/javascript"></script>
 		<script lang="javascript">
 
 		</script>
 	</head>
-	<body>
+	<body ng-app="animateApp">
 		<!-- This is the name and contact info block -->
 		<div class="title-block">
 			<div class="my-name">
 				<p class="header1">Pierson D'Enbeau</p>
 				<p class="subheader">(513) 258-4189 | denbeapc@gmail.com</p>
 			</div>
-			<div class="nav-menu">
-				<a href="index.html">About</a>
-				<a href="resume.html">Resume</a>
-				<a href="achievements.html">Achievements</a>
-				<a href="bootcamp.html">Bootcamp</a>
-				<a href="contact.html">Contact</a>
-			</div>
+			<nav class="navbar navbar-inverse navbar-static-top" 
+				style="padding-left: 20px; padding-right: 20px;">
+				<div class="container-fluid">
+					<ul class="nav navbar-nav" style="font-size:16px;">
+						<li>
+							<a href='#about'>About</a>
+						</li>
+						<li>
+							<a href='#resume'>Resume</a>
+						</li>
+						<li>
+							<a href='#achievements'>Achievements</a>
+						</li>
+						<li>
+							<a href='#bootcamp'>Bootcamp</a>
+						</li>
+						<li">
+							<a href='#contact'>Contact</a>
+						</li>
+					</ul>
+					<div class="nav navbar-static-top navbar-right">
+						<ul class="nav navbar-nav">
+							<li><a href="#">
+								<span class="fa fa-git-square" style="font-size:24px;color:white"></span>
+							</a></li>
+							<li><a href="#">
+								<span class="fa fa-linkedin-square" style="font-size:24px;color:white"></span>
+							</a></li>
+							<li><a href="#">
+								<span class="fa fa-facebook-square" style="font-size:24px;color:white"></span>
+							</a></li>
+						</ul>
+					</div>
+				</div>
+			</nav>
 		</div>
 
-		<div class="section-block">
-			<div>
-				<img class="img-rounded" id="about-me-img" src="\C:\Users\Max-Student\Pictures\me.png" width="300" alt="me">
-			</div>
-			<div class="section-text">
-				<p class="header2" style="text-align: center;">ABOUT ME</p>
-				<p>I have been programming ever since I was a freshman in high school. I had just beaten a video game I 
-				was playing, and the credits displayed the Java programming language logo. I was curious, and after some 
-				research, I ended the night writing my first "Hello World" program.
-				<br /><br />After spending many years exclusively coding in Java, I decided to make the switch to the C 
-				languages. I started off practicing C++ through making small ASCII video games. Soon after that, I found C# and have been coding in the .NET framework ever since.
-				<br /><br />I am absolutely in love with rock climbing, surrealist art. You can always find me near a mountain, on my computer, or at an art museum. I'm constantly trying to find ways to incorporate artistic inspiration into 
-				my projects.</p>
-			</div>
-		</div>
+		<div class="page {{ pageClass }}" ng-view></div>
 	</body>
 </html>
